set02/problem03_compile_errors.txt
Compilation started at 10/30/2023, 8:35:17 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c: In function 'main':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c:21:5: error: too few arguments to function 'is_composite'
     result=is_composite();
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c:14:5: note: declared here
 int is_composite(int n);
     ^
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c: In function 'output':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c:65:5: error: expected ';' before '}' token
     }
     ^
Compilation finished at 10/30/2023, 8:35:21 PM
Compilation started at 10/30/2023, 8:37:11 PM
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c: In function 'output':
c:\Users\kithu\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Keerthigdas\set02\problem03.c:65:5: error: expected ';' before '}' token
     }
     ^
Compilation finished at 10/30/2023, 8:37:16 PM
Compilation started at 10/30/2023, 8:37:55 PM
Compilation finished at 10/30/2023, 8:38:06 PM
